dep/probe/config/grpc-wrapper/res/envoy-config.yaml
---
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          tracing:
            operation_name: ingress
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: p-grpc-wrapper-route
            virtual_hosts:
            - name: p-grpc-wrapper-vh
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: p-grpc-wrapper-app
                decorator:
                  operation: p-grpc-wrapper-call
          http_filters:
          - name: envoy.router
            config: {}
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          tracing:
            operation_name: egress
          codec_type: http2
          stat_prefix: egress_http
          route_config:
            name: p-grpc-service-route
            virtual_hosts:
            - name: p-grpc-service-vh
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: p-grpc-service-envoy
                decorator:
                  operation: p-grpc-service-call
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: p-grpc-wrapper-app
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8080
  - name: p-grpc-service-envoy
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: p-grpc-service
        port_value: 80
  - name: zipkin
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: zipkin
        port_value: 9411
tracing:
  http:
    name: envoy.zipkin
    config:
      collector_cluster: zipkin
      collector_endpoint: "/api/v1/spans"
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
